# ReCoDE-exemplar-template-R

./: .lycheeignore  .nojekyll  LICENSE.html  LICENSE.md  PLANNING.md  README.md  _quarto.yml  about.html  index.html  index.qmd  mkdocs.yml  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: docs.yml
docs/: content.md
