[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project"
version = "0.1.0"

dependencies = [
    # Add runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "mkdocs==1.5.3",
    "mkdocs-include-markdown-plugin==3.7.1",
    "mkdocs-jupyter==0.24.5",
    "mkdocs-material==9.4.6",
    "python-markdown-math==0.8"
]
